Fixes z-index issues

--- a/styles/default.css
+++ b/styles/default.css
@@ -12,6 +12,7 @@
   background-color:var(--black);
   width:2200px;
   height:20px;
+  position:relative;
   z-index:-1;
   opacity:var(--opacity);
   box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.8);
